Fix logo/video z-index issue.
[Finishes #61420978]

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -276,6 +276,7 @@ img.image {
   background-color: rgba(0, 0, 0, 0.9);
   position: fixed;
   display: none;
+  z-index: $z-top + 1;
 
   &.on { display: block; }
 }
